# git-review

./: .gitignore  .gitreview  .mailmap  .stestr.conf  .testr.conf  AUTHORS  CONTRIBUTING.rst  HACKING  HACKING.rst  MANIFEST.in  PKG-INFO  README.md  README.rst  bindep.txt  git-review  git-review.1  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  manpages  rules
doc/: Makefile  conf.py  index.rst  requirements.txt
doc/source/: conf.py  developing.rst  index.rst  installation.rst  releasenotes.rst  usage.rst
git_review/: cmd.py
git_review.egg-info/: PKG-INFO  SOURCES.txt
git_review/tests/: __init__.py  check_test_id_hashes.py  prepare.py  test_git_review.py  test_unit.py  utils.py
releasenotes/notes/: fix-exit-code-5ab7f6314976319f.yaml  fix-usepushurl-c4a234689d808ece.yaml  ignore-topic-for-master-patches-9ba01c0762d3df65.yaml  missed-notes-f903719767e0a0ce.yaml  remove-automatic-branch-naming-8e3e2f6487637b86.yaml
