[metadata]
name = git-review
summary = Tool to submit code to Gerrit
description-file = README.rst
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = git gerrit review
author = OpenStack
author-email = openstack-infra@lists.openstack.org
home-page = https://pypi.python.org/pypi/git-review

[files]
packages =
    git_review

[entry_points]
console_scripts =
    git-review = git_review.cmd:main
